--- a/silver_network/views/silver_node_views.xml
+++ b/silver_network/views/silver_node_views.xml
@@ -31,27 +31,27 @@
             <field name="arch" type="xml">
                 <form string="Nodo ISP">
                     <header>
-                        <button name="create_core" string="Crear Equipo Core" type="object" />
+                        <!--button name="create_core" string="Crear Equipo Core" type="object" /-->
                         <!--button name="action_create_ticket_node" string="Crear Ticket" icon="fa-ticket" type="object" class="oe_highlight"/-->
-                        <button name="create_olt" string="Crear Equipo Olt" type="object"/>
+                        <!--button name="create_olt" string="Crear Equipo Olt" type="object"/-->
 
 
                         
                     </header>
                     <sheet string="Nodo ISP">
                                                 <div class="botones-rightt" name="button_box">
-                            <button class="oe_stat_button" type="object" name="action_view_cores" icon="fa-arrows-v">
+                            <!--button class="oe_stat_button" type="object" name="action_view_cores" icon="fa-arrows-v">
                                 <field string="Equipos Core" name="core_count" widget="statinfo"/>
-                            </button>
+                            </button-->
                             <!--button class="oe_stat_button" type="object" name="action_view_support_tickets" icon="fa-ticket">
                                 <field string="Tickets" name="support_ticket_count" widget="statinfo"/>
                             </button-->
                             <!--button class="oe_stat_button" type="action" name="%(stock.action_picking_tree_all)d" icon="fa-arrows-v">
                                 <!field string="Movimientos" name="stock_picking_count" widget="statinfo"/>
                             </button-->
-                            <button class="oe_stat_button" type="object" name="action_search_view_olts" icon="fa-arrows-v">
+                            <!--button class="oe_stat_button" type="object" name="action_search_view_olts" icon="fa-arrows-v">
                                 <field string="Equipos Olt" name="olt_count" widget="statinfo"/>
-                            </button>
+                            </button-->
                         </div>
                         <div class="oe_title">
                             <h1>
@@ -66,7 +66,7 @@
                                         <field name="zone_id" required="True"/>
                                         <field name="country_id"/>
                                         <field name="state_id" domain="[('country_id','=', country_id)]"/>
-                                        <field name="zip"/>
+                                       <!--field name="zip"/-->
                                         <!--field name="journal_id"/>
                                         <field name="account_analytic_id"/>
                                         <field name="account_cost_analytic_id"/-->
@@ -94,7 +94,22 @@
                         <notebook name="related">
 
                             <page name="Equipos Core" >
-                                <field name="core_ids"/>
+                                <field name="core_ids">
+                                     <tree string="Equipos Core Silver" default_order="name desc" >
+                    <field name="name"/>
+                    <field name="hostname_core"/>
+
+                    <!--field name="brand_id"/-->
+                    <field name="model"/>
+                    <field name="ip"/>
+
+                    <!--field name="port"/>
+                    <field name="username"/-->
+                    <field name="state" widget="badge" decoration-danger="state == 'down'"
+                           decoration-success="state == 'active'"/>
+
+                </tree>
+                                </field>
                             </page>
                             <page name="Equipos OLT" >
                                 <field name="olt_ids"/>
