--- a/silver_network/views/silver_splice_closure_views.xml
+++ b/silver_network/views/silver_splice_closure_views.xml
@@ -29,7 +29,7 @@
                                 <group>
                                     <field name="street"/>
                                     <field name="street2"/>
-                                    <field name="zip"/>
+                                    <!--field name="zip"/-->
                                     <field name="state_id"/>
                                     <field name="country_id"/>
                                     <field name="gps_lat"/>
