--- a/silver_network/views/menus.xml
+++ b/silver_network/views/menus.xml
@@ -54,7 +54,7 @@
 
 
 
-          <menuitem id="menu_isp_zone" name="Zonas" parent="menu_isp_config" action="action_silver_zone" sequence="1"/>
+          <menuitem id="menu_isp_zone" name="Zonas" parent="menu_isp_config" action="silver_base.action_silver_zone" sequence="1"/>
 
         <menuitem id="menu_isp_radius_table" name="Tablas Radius" parent="menu_isp_config" action="action_silver_radius_table" sequence="10"/>
         <menuitem id="menu_isp_radius_attributes" name="Atributos Radius" parent="menu_isp_config" action="action_silver_radius_attributes" sequence="20"/>
