--- a/silver_network/views/silver_zone_views.xml
+++ b/silver_network/views/silver_zone_views.xml
@@ -1,63 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <!-- Accion y Menu para isp.zone -->
-        <record id="action_silver_zone" model="ir.actions.act_window">
-            <field name="name">Zonas ISP</field>
-            <field name="res_model">silver.zone</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-
-
-        <!-- Vistas para isp.zone -->
-        <record id="view_silver_zone_tree" model="ir.ui.view">
-            <field name="name">silver.zone.tree</field>
+        <record id="view_silver_zone_form_inherit" model="ir.ui.view">
+            <field name="name">silver.zone.form.inherit</field>
             <field name="model">silver.zone</field>
+            <field name="inherit_id" ref="silver_base.view_silver_zone_form"/>
             <field name="arch" type="xml">
-                <tree string="Zonas" default_order="name desc">
+                <xpath expr="//sheet" position="inside">
+                    <notebook>
+                        <page string="Nodos">
+                            <field name="node_ids"/>
+                        </page>
+                    </notebook>
 
-                    <field name="name"/>
-                   <field name="gps_top"/>
-                                <field name="gps_left"/>
-                                <field name="gps_right"/>
-                                <field name="gps_bottom"/>
-                </tree>
+                </xpath>
             </field>
         </record>
 
-        <record id="view_silver_zone_form" model="ir.ui.view">
-            <field name="name">silver.zone.form</field>
+        <record id="view_silver_zone_tree_inherit" model="ir.ui.view">
+            <field name="name">silver.zone.tree.inherit</field>
             <field name="model">silver.zone</field>
+            <field name="inherit_id" ref="silver_base.view_silver_zone_tree"/>
             <field name="arch" type="xml">
-                <form string="Zona ISP">
-                    <header>
-
-
-                    </header>
-                    <sheet string="Zona ISP">
-                       
-                        <div class="oe_title">
-                            <h1>
-                                <field name="name" placeholder="Nombre de la Zona"/>
-                            </h1>
-                        </div>
-                        <group>
-                            <group>
-                                <field name="gps_top"/>
-                                <field name="gps_left"/>
-                                <field name="gps_right"/>
-                                <field name="gps_bottom"/>
-                            </group>
-                        </group>
-
-                    </sheet>
-                    <div class="oe_chatter">
-                        <field name="message_follower_ids"/>
-                        <field name="activity_ids"/>
-                        <field name="message_ids"/>
-                    </div>
-                </form>
+                <xpath expr="//tree" position="inside">
+                    <field name="node_count"/>
+                </xpath>
             </field>
         </record>
+
+
+
     </data>
 </odoo>
